Tue Jun 15 20:32:05 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* gnubg.gtkrc.in: autogenerate gnubg.gtkrc

Tue Jun 15 15:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: gtk_widget_destroy error message when opening
	hint window (reported by Ian)

Tue Jun 15 12:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgamelist.c, gnubg.gtkrc: Fix font styles for gtk2 and style order

Tue Jun 15 05:58:34 2004  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* credits.sh, credits.c, AUTHORS: Fix Japanese translations
	credit.

Sun Jun 13 22:32:09 CEST 2004 Jim Segrave <jes@jes-2.demon.nl>

	* import.c - allow handling uncompleted matches in .mat files
	
Sat Jun 12 12:25:54 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* import.c (ParseSGGOptions): use strcasecmp for deciding which
	variant of backgammon is used.
	(reported by Hugh Sconyers)

Fri Jun 11 18:56:45 GMT 2004  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkboard.c: Fix minor chequer display bug

Fri Jun 11 19:00:05 CEST 2004  Jim Segrave  <jes@jes-2.demon.nl>

	* gtkgamelist.c gnubg.gtkrc
	* Add gtkrc support for any-blunder/any-error/any-doubtful

Thu Jun 10 17:41:40 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* Makefile.am: add gtkgamelist.c

Thu Jun  10  14:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgamelist.c, gnubg.gtkrc: Multiple styles and new defaults for game list

Wed Jun  9  14:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, gtkgamelist.c, gnubg.gtkrc: Get game list colours from gtkrc file

Tue Jun  8  8:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkgamelist.c: Colour mistakes in game list

Mon Jun  7  8:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Remove keyboard focus from game window, fix minor bug
	with new right click menu.
	* gnubg.c: Empty board on startup (try #2)

Sun Jun  6 18:56:45 2004 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c: Empty board on startup