@@ -18,7 +18,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
-# $Id: gnubg.gtkrc,v 1.9 2004/06/15 18:41:00 thyssen Exp $
+# $Id: gnubg.gtkrc,v 1.10 2004/06/16 12:02:59 Superfly_Jon Exp $
 #
 # style <name> [= <name>]
 # {
@@ -72,10 +72,10 @@ fg[PRELIGHT] = { 0.2, 0.1, 0.0 }
 
 style "movelabel" = "default"
 {
-  fg[ACTIVE] = { 0xffff, 0xffff, 0 }
+  fg[ACTIVE] = { 0xffff, 0, 0 }
 }
 
-widget "*Board.*move" style "movelabel"
+widget "*.gnubg-move" style "movelabel"
 
 
 #
