@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gtkboard.c,v 1.181 2004/06/11 17:56:00 Superfly_Jon Exp $
+ * $Id: gtkboard.c,v 1.182 2004/06/16 12:02:59 Superfly_Jon Exp $
  */
 
 #if HAVE_CONFIG_H
@@ -4024,7 +4024,7 @@ static void board_init( Board *board ) {
     gtk_box_pack_start ( GTK_BOX ( pwvbox ), 
                          bd->wmove = gtk_label_new( NULL ),
                          FALSE, FALSE, 0 );
-    gtk_widget_set_name( bd->wmove, "move" );
+    gtk_widget_set_name( bd->wmove, "gnubg-move" );
 
     /* match length */
 
